<resources>
    <string name="app_name" translatable="false">Audium</string>
    <string name="username">Username</string>
    <string name="register">Sign In</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOG IN</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="enter_username_and_password">Please enter your username and your password</string>
    <string name="cannot_register">Cannot registered for now, try again later</string>
    <string name="register_failed">Registration failed</string>
    <string name="register_success">Registration successful</string>
    <string name="fields_must_be_valid">All fields must be valid</string>
    <string name="register_error">An error occured when registering</string>
    <string name="username_exists">Username already exists</string>
    <string name="invalid_age">Age must be greater than 0</string>
    <string name="password_validation">Password must have eight characters, at least one uppercase letter, one lowercase letter, one number and one special character</string>
    <string name="last_name_validation">Last name must not contain special characters</string>
    <string name="first_name_validation">First name must not contain special characters and not start and end with spaces</string>
    <string name="username_validation">Username must have only lowercase, uppercase and number characters or \'-\'</string>
    <string name="invalid_state">You have not the permissions to access to this page</string>
    <string name="logout">Logout</string>
    <string name="manage_users">Manage users</string>
    <string name="manage_artists">Manage artists</string>
    <string name="manage_tracks">Manage tracks</string>
    <string name="add">Add</string>
    <string name="artists_list">Artist list</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_username">Username invalid</string>
    <string name="wrong_credentials">Credentials doesn\'t match</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="registertext">Not registered yet ? Please </string>
    <string name="artist_informations">Artist Informations</string>
    <string name="musics">Musics</string>
    <string name="track_list">Track List</string>
    <string name="app_name_capital" translatable="false">AUDIUM</string>
    <string name="admin">Admin</string>
    <string name="back">Back</string>
    <string name="add_an_artist">Add an artist</string>
    <string name="stage_name">Stage name</string>
    <string name="image_path">Image path</string>
    <string name="add_an_album">Add an album</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_album">Add Album</string>
    <string name="track_name">Track name</string>
    <string name="music_path">Music path</string>
    <string name="artist_id">Artist id</string>
    <string name="album_id">Album Id</string>
    <string name="choose_file">Choose file</string>
    <string name="add_track">Add a track</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="save">Save</string>
    <string name="choose_an_album_from">Choose an album from</string>
    <string name="choose_an_artist">Choose an artist</string>
    <string name="choose_an_album">Choose an album</string>
    <string name="error_occured">An error occured, please try again later</string>
    <string name="artist">Artist</string>
    <string name="album">album</string>
    <string name="artist_name_error">Artist name error</string>
    <string name="playlists">Playlists</string>
    <string name="add_a_playlist">Add a playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="available_playlists">Available playlists</string>
    <string name="search_hint">Albums, songs, artists ...</string>
    <string name="users">Users</string>
    <string name="user_informations">User Informations</string>
    <string name="track_informations">Track Informations</string>
    <string name="album_maj">Album</string>
    <string name="playlist_informations">Playlist Informations</string>
    <string name="albums">Albums</string>
    <string name="image">Image</string>
    <string name="options">Options</string>
    <string name="track_image">track_image</string>
    <string name="change_image">Change image</string>
    <string name="modify_playlist">Modify playlist</string>
    <string name="update_successsful">Update successful</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="cannot_modify_playlist">Cannot modify the playlist</string>
    <string name="playlist_has_no_track">This playlist has no track</string>
    <string name="album_image">album_image</string>
    <string name="print_age">years old</string>
    <string name="no_album">No album</string>
    <string name="track_infos">track_infos</string>
    <string name="no_playlist">No playlist</string>
    <string name="track">Track</string>
    <string name="maj_album">Album</string>
    <string name="albums_informations">Albums informations</string>
    <string name="modify_album">Modify Album</string>
    <string name="cannot_modify_album">Cannot modify album</string>
    <string name="album_has_no_track">Album has no track</string>
</resources>