<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />
    <EditText
        android:id="@+id/edit_track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist" />
    <EditText
        android:id="@+id/edit_track_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_page_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="4" />

            <Button
                android:id="@+id/btn_choose_album_track_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/choose_an_album"
                android:onClick="addAlbum"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_path" />
    <EditText
        android:id="@+id/edit_track_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_path" />
    <EditText
        android:id="@+id/edit_track_image_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_save_track"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:onClick="saveTrack"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:layout_gravity="center"
        android:onClick="modifyTrack"/>

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_playlist"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:onClick="addTrack"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_gravity="center"
        android:onClick="deleteTrack"/>
</LinearLayout>