<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_an_artist"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_marginVertical="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/artist_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/artist_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/artist_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage_name"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/artist_stage_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_path"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/image_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:onClick="addArtist"/>
</LinearLayout>