<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:gravity="center"
        android:text="@string/add_an_album"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/album_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/album_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:inputType="text" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:text="@string/image_path" />

    <EditText
        android:id="@+id/album_image_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:inputType="text" />

    <ListView
        android:id="@+id/artist_tracks"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_margin="20sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addAlbum"
        android:text="@string/add" />

</LinearLayout>