<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_track"
            style="@style/Theme.Audium.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/track" />

        <RadioButton
            android:id="@+id/radio_album"
            style="@style/Theme.Audium.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maj_album" />

        <RadioButton
            android:id="@+id/radio_artist"
            style="@style/Theme.Audium.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/artist" />
    </RadioGroup>

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:closeIcon="@drawable/ic_close"
        android:searchHintIcon="@drawable/ic_search"
        android:searchIcon="@drawable/ic_search"
        android:text="@string/search"
        android:theme="@style/Theme.Audium.SearchView" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

</LinearLayout>