<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/mediabutton3"
                android:contentDescription="@string/back"
                android:padding="10sp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                style="@style/Theme.Audium.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/settings" />
        </RelativeLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/admin_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="10dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <TextView
                style="@style/Theme.Audium.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/user_informations" />

            <TextView
                style="@style/Theme.Audium.SubSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/tv_first_name"
                style="@style/Theme.Audium.SubSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                style="@style/Theme.Audium.SubSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <TextView
                android:id="@+id/tv_last_name"
                style="@style/Theme.Audium.SubSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                style="@style/Theme.Audium.SubSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/Theme.Audium.SubSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                style="@style/Theme.Audium.SubSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <TextView
                android:id="@+id/tv_age"
                style="@style/Theme.Audium.SubSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/logout"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>